--- a/style/style.css
+++ b/style/style.css
@@ -11,10 +11,7 @@ html {
 	box-sizing: inherit;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
-}
+
 
 img {
 	max-width: 100%;
@@ -48,6 +45,7 @@ body {
 .main_menu--link{
     display: inline-block;
     padding: 24px 49px;
+
 }
 .main_menu--link:not(:last-child){
     margin-right: 25px;
@@ -55,7 +53,7 @@ body {
 .conteiner--articl{
     margin-bottom: 40px;
 }
-p{
+.articl{
     margin-bottom: 40px;
     width: 872px;
 }
@@ -69,28 +67,23 @@ p{
 .main--content:not(:last-child)::after{
     margin-bottom: 40px;
 }
-.main--content {
-    width: 692px;
-
+.list_block:last-child{
+  margin-bottom: 0;
 }
-.list_block{
-    margin-bottom: 20px;
-
-}
-ul{
+.main-content_list{
     padding-left: 15px;
-    /*margin-left: 15px;*/
+
 }
-h2,h3{
+.general-artic{
     margin-bottom: 10px;
 }
 
-figure{
+.main-content--fig{
     margin: 0;
     margin-bottom: 40px;
 
 }
-figcaption {
+.main-content--cap {
     width: 900px;
 }
 .img-content{
@@ -99,4 +92,22 @@ figcaption {
 .footer--content:last-child{
     border-radius: 20px 20px 0 0 ;
     margin-bottom: 0;
+}
+.main--content__link{
+  text-decoration: none;
+  color: black;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.articl--last{
+  margin: 0;
+  padding-bottom: 0;
+}
+.main-articl{
+  width: 692px;
+  margin-bottom: 10px;
+}
+.main--content__link--last{
+  margin-bottom: 0;
 }
