--- a/style/style.css
+++ b/style/style.css
@@ -19,13 +19,14 @@ img {
 }
 
 body {
-	font-family: 'font', sans-serif;
+  font-family: Arial, Verdana, sans-serif;
 }
 .container{
     margin: 0 auto;
     padding: 80px 0;
     width: 1170px;
 }
+
 .main-content{
     display: flex;
     flex-direction: column;
@@ -40,29 +41,56 @@ body {
 }
 .main_menu{
     margin-bottom: 50px;
-
+    font-size: 18px;
+    font-weight: 700;
 }
 .main_menu--link{
     display: inline-block;
     padding: 24px 49px;
-
+    color: wheat;
+    text-decoration: none;
+    background-color: #3f2aff;
 }
 .main_menu--link:not(:last-child){
     margin-right: 25px;
 }
 .conteiner--articl{
     margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 60px;
+    color: #333;
+    line-height: 60px;
 }
 .articl{
     margin-bottom: 40px;
     width: 872px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    color: #333;
+}
+.articl__special{
+  border-radius: 20px;
+  padding: 50px 95px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 30px;
+  color: white;
+  background-color: #3f2aff;
 }
 .main--content{
     border-radius: 20px;
     padding: 30px;
     background-color: #f3f3f3;
     margin-bottom: 40px;
-
+    background-image: url('/img/decorate-1.png');
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.headline{
+  font-size: 40px;
+  line-height: 46px;
+  color: #333;
 }
 .main--content:not(:last-child)::after{
     margin-bottom: 40px;
@@ -71,20 +99,49 @@ body {
   margin-bottom: 0;
 }
 .main-content_list{
+    margin-bottom: 0;
     padding-left: 15px;
 
+}
+.list_block::marker{
+  color: #3f2aff;
 }
 .general-artic{
     margin-bottom: 10px;
 }
-
+.headline_level-3{
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  color: #333;
+}
 .main-content--fig{
     margin: 0;
     margin-bottom: 40px;
+    font-size: 0;
 
 }
+.main_menu--download{
+  font-weight: 700;
+  font-size: 18px;
+  color: #3f2aff;
+  text-decoration: none;
+  background-image: url('/img/download.png');
+  background-position: left center;
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+  padding-left: 30px;
+}
 .main-content--cap {
-    width: 900px;
+    width: 872px;
+    border-width: 0 1px 1px 1px;
+    border-color:#b6b6b6;
+    Border-style: solid;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    text-align: center;
 }
 .img-content{
     margin-bottom: 40px;
@@ -95,9 +152,11 @@ body {
 }
 .main--content__link{
   text-decoration: none;
-  color: black;
   margin-bottom: 20px;
-  display: block;
+  display: inline-block;
+  border-bottom: 1px solid #3f2aff;
+  font-size: 20px;
+  color: #3f2aff;
 }
 
 .articl--last{
@@ -110,4 +169,11 @@ body {
 }
 .main--content__link--last{
   margin-bottom: 0;
+}
+.img-content{
+  margin-bottom: 15px;
+}
+.footer--content{
+  background-image: url(/img/decorate-2.png);
+  background-size: contain;
 }
