--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,6 @@ html {
 *::after {
 	box-sizing: inherit;
 }
-
-
-
 img {
 	max-width: 100%;
 
@@ -83,9 +80,11 @@ body {
     padding: 30px;
     background-color: #f3f3f3;
     margin-bottom: 40px;
-    background-image: url('/img/decorate-1.png');
     background-repeat: no-repeat;
     background-position: right;
+}
+.main--content__pic{
+    background-image: url('../img/decorate-1.png');
 }
 .headline{
   font-size: 40px;
@@ -119,6 +118,7 @@ body {
     margin: 0;
     margin-bottom: 40px;
     font-size: 0;
+    width: 872px;
 
 }
 .main_menu--download{
@@ -126,18 +126,16 @@ body {
   font-size: 18px;
   color: #3f2aff;
   text-decoration: none;
-  background-image: url('/img/download.png');
+  background-image: url('../img/download.png');
   background-position: left center;
   background-size: 20px 20px;
   background-repeat: no-repeat;
   padding-left: 30px;
 }
 .main-content--cap {
-    width: 872px;
     border-width: 0 1px 1px 1px;
     border-color:#b6b6b6;
     Border-style: solid;
-
     font-size: 14px;
     font-weight: 400;
     line-height: 19px;
@@ -174,7 +172,7 @@ body {
   margin-bottom: 15px;
 }
 .footer--content{
-  background-image: url(/img/decorate-2.png);
+  background-image: url('../img/decorate-2.png');
   background-size: contain;
 }
 .container_items{
@@ -182,7 +180,7 @@ body {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  background: #E5E5E5;
+  
 
 
 }
@@ -210,6 +208,10 @@ body {
 .container-back_link{
   text-decoration: none ;
   color: #3F2AFF;
+  padding-left: 55px;
+  background-image: url('../img/Arrow.svg');
+  background-repeat: no-repeat;
+  background-position: left;
 }
 .container_articl{
   font-family: Arial;
