--- a/style/style.css
+++ b/style/style.css
@@ -208,10 +208,15 @@ body {
 .container-back_link{
   text-decoration: none ;
   color: #3F2AFF;
+  font-weight: 400;
+  font-size: 20px;
   padding-left: 55px;
   background-image: url('../img/Arrow.svg');
   background-repeat: no-repeat;
   background-position: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  line-height: 23px;
   
 }
 .container_articl{
