--- a/style/style.css
+++ b/style/style.css
@@ -19,9 +19,9 @@ body {
   font-family: Arial, Verdana, sans-serif;
 }
 .container{
-    margin: 50px auto;
-    height: 1477px;
-    width: 1170px;
+    margin: 0px auto;
+    width: 1200px;
+    padding: 50px 15px;
 }
 
 .main-content{
@@ -176,20 +176,18 @@ body {
   background-size: contain;
 }
 .container_items{
-  margin: 0 0 50px 0;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  
-
+  font-size: 0;
 
 }
 .container_list{
-  font-size:0;
+  display:block;
   list-style-type: none;
-  Width: 572px;
-  Height : 505px;
-  margin-right: 25px;
+  width: 572px;
+  margin-right: 20px;
+  float: left;
+  min-height:470px;
+  padding: 0px 25px 25px 25px;
   margin-bottom: 25px;
   background: #FFFFFF;
   filter: drop-shadow(0px 0px 40px rgba(0, 0, 0, 0.1));
@@ -202,11 +200,16 @@ body {
   margin-bottom: 0;
 }
 .container_logo{
-  Width :137px;
-  Height :30px;
-  margin-bottom: 25px;
+  width :137px;
+  height :30px;
+}
+.container-link_logo{
+    display: inline-block;
+    margin-bottom: 25px;
+
 }
 .container-back_link{
+  display: block;
   text-decoration: none ;
   color: #3F2AFF;
   font-weight: 400;
@@ -217,6 +220,8 @@ body {
   background-position: left;
   font-style: normal;
   line-height: 23px;
+  margin-bottom: 25px;
+  width: 163px;
 }
 .container_articl{
   font-size: 60px;
@@ -241,29 +246,19 @@ body {
 }
 .container_list-number{
   position: absolute;
-  right: 0px;
-  bottom: 0px;
+  right: 25px;
+  bottom: 25px;
 }
-.container_list-main{
-  margin: 25px;
-  position: relative;
-  Width :522px;
-  Height:275px;
-}
-.footer{
+.footer-btn{
   display: block;
   margin: 0 auto;
   background-color: #fff;
-  border: none;
-}
-.footer-link{
-  text-decoration: none;
   color:#3F2AFF ;
   font-weight: 700;
   font-size: 18px;
   border: 2px solid #3F2AFF;
   padding: 25px 76px;
-  display: block;
+  cursor: pointer;
 }
 .container_list-paragraf{
   font-weight: 400;
